@@ -1617,6 +1617,32 @@ processor 16f1787, 16lf1787
         memmap          0x20 0x6f 0x000
         memmap          0x70 0x7f 0xf80
 
+processor 16f1788, 16lf1788
+	program		16K
+	data		2048
+        eeprom          256
+        enhanced        1
+	io		25
+	maxram		0xfff
+        bankmsk         0xf80
+	config		0x8007 0x8008
+        regmap          0xf80 0x00 0x01 0x02 0x03 0x04 0x05 0x06 0x07 0x08 0x09 0x0a 0x0b
+        memmap          0x20 0x6f 0x000
+        memmap          0x70 0x7f 0xf80
+
+processor 16f1789, 16lf1789
+	program		16K
+	data		2048
+        eeprom          256
+        enhanced        1
+	io		36
+	maxram		0xfff
+        bankmsk         0xf80
+	config		0x8007 0x8008
+        regmap          0xf80 0x00 0x01 0x02 0x03 0x04 0x05 0x06 0x07 0x08 0x09 0x0a 0x0b
+        memmap          0x20 0x6f 0x000
+        memmap          0x70 0x7f 0xf80
+
 # PICxxF182x family
 processor 12f1822, 12lf1822
         program         2K
